P3/ejudge_contests/paralymp/var/archive/xmlreports/0/0/2/000093
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="93" judge-id="35" status="CE" scoring="ACM" run-tests="0" contest-id="341" compile-error="yes" >
  <uuid>11c180d4-0ac1-47ef-aa93-7050d7667afd</uuid>
  <compiler_output>000093.cpp:18:16: error: use of undeclared identifier 'z'
    if(n&gt;=200) z=2;
               ^
000093.cpp:19:35: error: use of undeclared identifier 'z'
    for(int i=1;i&lt;=n || i&gt;=n-i;i+=z){
                                  ^
000093.cpp:19:17: warning: variables 'i' and 'n' used in loop condition not modified in loop body [-Wfor-loop-analysis]
    for(int i=1;i&lt;=n || i&gt;=n-i;i+=z){
                ^  ~    ~  ~ ~
1 warning and 2 errors generated.

</compiler_output>
</testing-report>
